--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -3,3 +3,14 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+
+@media screen and (max-width: 640px ) {
+    .main{
+        display:flex;
+        flex-wrap: wrap-reverse;
+        height: auto;
+        padding-top: 5px; 
+        padding-bottom: 5px 
+    }
+}
