--- a/src/components/products/Product.module.css
+++ b/src/components/products/Product.module.css
@@ -1,3 +1,13 @@
 .main{
     font-family: "Roboto Condensed", sans-serif;
 }
+
+
+
+
+@media screen and ( max-width:640px) {
+    .partOne{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
